// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dialogue > animated dialogue line (per-glyph create + per-letter animate) 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Hi.",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": false,
      "instructions": [
        {
          "control": "show",
          "text": "H",
        },
        {
          "after": 0.025,
          "control": "show",
          "text": "i",
        },
        {
          "after": 0.05,
          "control": "show",
          "text": ".",
        },
      ],
      "target": "dialogue",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "HERO",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": false,
      "instructions": [
        {
          "control": "show",
          "text": "HERO",
        },
      ],
      "target": "character_name",
    },
  },
]
`;

exports[`dialogue > character name + parenthetical routing > messages 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Hi there.",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "H",
        },
        {
          "after": 0.025,
          "control": "show",
          "text": "i",
        },
        {
          "after": 0.05,
          "control": "show",
          "text": " ",
        },
        {
          "after": 0.07500000000000001,
          "control": "show",
          "text": "t",
        },
        {
          "after": 0.1,
          "control": "show",
          "text": "h",
        },
        {
          "after": 0.125,
          "control": "show",
          "text": "e",
        },
        {
          "after": 0.15,
          "control": "show",
          "text": "r",
        },
        {
          "after": 0.175,
          "control": "show",
          "text": "e",
        },
        {
          "after": 0.19999999999999998,
          "control": "show",
          "text": ".",
        },
      ],
      "target": "dialogue",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "HERO",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "HERO",
        },
      ],
      "target": "character_name",
    },
  },
]
`;

exports[`dialogue > character name + parenthetical routing > text-targets 1`] = `
[
  "character_name",
  "dialogue",
]
`;

exports[`dialogue > inline-styled chunks (bold / italic) 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "This is bold and italic text.",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "T",
        },
        {
          "after": 0.025,
          "control": "show",
          "text": "h",
        },
        {
          "after": 0.05,
          "control": "show",
          "text": "i",
        },
        {
          "after": 0.07500000000000001,
          "control": "show",
          "text": "s",
        },
        {
          "after": 0.1,
          "control": "show",
          "text": " ",
        },
        {
          "after": 0.125,
          "control": "show",
          "text": "i",
        },
        {
          "after": 0.15,
          "control": "show",
          "text": "s",
        },
        {
          "after": 0.175,
          "control": "show",
          "text": " ",
        },
        {
          "after": 0.19999999999999998,
          "control": "show",
          "style": {
            "font_weight": "bold",
          },
          "text": "b",
        },
        {
          "after": 0.22499999999999998,
          "control": "show",
          "style": {
            "font_weight": "bold",
          },
          "text": "o",
        },
        {
          "after": 0.24999999999999997,
          "control": "show",
          "style": {
            "font_weight": "bold",
          },
          "text": "l",
        },
        {
          "after": 0.27499999999999997,
          "control": "show",
          "style": {
            "font_weight": "bold",
          },
          "text": "d",
        },
        {
          "after": 0.3,
          "control": "show",
          "text": " ",
        },
        {
          "after": 0.55,
          "control": "show",
          "text": "a",
        },
        {
          "after": 0.5750000000000001,
          "control": "show",
          "text": "n",
        },
        {
          "after": 0.6000000000000001,
          "control": "show",
          "text": "d",
        },
        {
          "after": 0.6250000000000001,
          "control": "show",
          "text": " ",
        },
        {
          "after": 0.6500000000000001,
          "control": "show",
          "style": {
            "font_style": "italic",
          },
          "text": "i",
        },
        {
          "after": 0.6750000000000002,
          "control": "show",
          "style": {
            "font_style": "italic",
          },
          "text": "t",
        },
        {
          "after": 0.7000000000000002,
          "control": "show",
          "style": {
            "font_style": "italic",
          },
          "text": "a",
        },
        {
          "after": 0.7250000000000002,
          "control": "show",
          "style": {
            "font_style": "italic",
          },
          "text": "l",
        },
        {
          "after": 0.7500000000000002,
          "control": "show",
          "style": {
            "font_style": "italic",
          },
          "text": "i",
        },
        {
          "after": 0.7750000000000002,
          "control": "show",
          "style": {
            "font_style": "italic",
          },
          "text": "c",
        },
        {
          "after": 0.8000000000000003,
          "control": "show",
          "text": " ",
        },
        {
          "after": 1.0500000000000003,
          "control": "show",
          "text": "t",
        },
        {
          "after": 1.0750000000000002,
          "control": "show",
          "text": "e",
        },
        {
          "after": 1.1,
          "control": "show",
          "text": "x",
        },
        {
          "after": 1.125,
          "control": "show",
          "text": "t",
        },
        {
          "after": 1.15,
          "control": "show",
          "text": ".",
        },
      ],
      "target": "dialogue",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "HERO",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "HERO",
        },
      ],
      "target": "character_name",
    },
  },
]
`;

exports[`dialogue > instant dialogue line (no per-letter timing) 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Hi.",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "H",
        },
        {
          "after": 0.025,
          "control": "show",
          "text": "i",
        },
        {
          "after": 0.05,
          "control": "show",
          "text": ".",
        },
      ],
      "target": "dialogue",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "HERO",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "HERO",
        },
      ],
      "target": "character_name",
    },
  },
]
`;

exports[`dialogue > multi-line dialogue with whitespace + centered alignment 1`] = `
[
  {
    "id": "req-1",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "Line one.",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-1",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-2",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "L",
        },
        {
          "after": 0.025,
          "control": "show",
          "text": "i",
        },
        {
          "after": 0.05,
          "control": "show",
          "text": "n",
        },
        {
          "after": 0.07500000000000001,
          "control": "show",
          "text": "e",
        },
        {
          "after": 0.1,
          "control": "show",
          "text": " ",
        },
        {
          "after": 0.125,
          "control": "show",
          "text": "o",
        },
        {
          "after": 0.15,
          "control": "show",
          "text": "n",
        },
        {
          "after": 0.175,
          "control": "show",
          "text": "e",
        },
        {
          "after": 0.19999999999999998,
          "control": "show",
          "text": ".",
        },
      ],
      "target": "dialogue",
    },
  },
  {
    "id": "req-3",
    "kind": "request",
    "method": "ui/update",
    "params": {
      "attributes": {
        "text": "HERO",
      },
      "breakpoints": {
        "lg": 1024,
        "md": 768,
        "sm": 640,
        "xl": 1280,
        "xs": 400,
      },
      "content": undefined,
      "element": "e-2",
      "style": {
        "display": null,
      },
    },
  },
  {
    "id": "req-4",
    "kind": "request",
    "method": "ui/write-text",
    "params": {
      "instant": true,
      "instructions": [
        {
          "control": "show",
          "text": "HERO",
        },
      ],
      "target": "character_name",
    },
  },
]
`;
